--- a/Tim.html
+++ b/Tim.html
@@ -10,7 +10,7 @@ href="css/testing-stylesheet.css"/>
  <body>
    <p> In 1989, Tim Berners-Lee invented the World Wide Web an Internet based hypermedia initiative for global information sharing while
      at cern the European Particle Physics Laboratory he wrote the first web client and server in 1990 his specifications of urls http 
-     and html ( which was used to create this website :)) were refined as web technology spread.Tim Berners-Lee, a British scientist,
+     and html ( which was used to create this website) were refined as web technology spread.Tim Berners-Lee, a British scientist,
       invented the World Wide Web in 1989 while working at cern the web was originally conceived and developed to meet the demand for 
       automated information sharing between scientists in universities and institutes around the world these actions allowed the web to flourish.</p>
       <p>See Tim above</p>
