--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ href="css/testing-stylesheet.css"/>
  <body>
   <p>This is our project on the internet. Click a link to view!</p>
  <p>Created by Oisin, Liam and Kamil.</p>
-  <p>Website coder: Oisin :)</p>
+  <p>Website coder: Oisin</p>
   <ul>
     <li><a href="why.html">How and Why?</a></li>
     <li><a href="Tim.html">Tim Berners-Lee</a></li>
