--- a/today.html
+++ b/today.html
@@ -4,7 +4,7 @@
   <title>Today</title>
   <link type="text/css" rel="stylesheet"
 href="css/testing-stylesheet.css"/>
-<p><img src="images/snap.png"/><img src="images/insta.png"/></p>
+<p><img src="images/snap.png"/><img src="images/amazon.png"/><img src="images/google.jpg"/></p>
  </head>
  <h1>What is the Internet Used for Today?</h1>
  <body>
