--- a/today.html
+++ b/today.html
@@ -4,7 +4,7 @@
   <title>Today</title>
   <link type="text/css" rel="stylesheet"
 href="css/testing-stylesheet.css"/>
-  <p><img src="images/amazon.jpg"/><img src="images/google.png"/><p><img src="images/snap.png"/></p>
+  <p><img src="images/snap.png"/><img src="images/google.png"/><img src="images/amazon.jpg"/></p>
  </head>
  <h1>What is the Internet Used for Today?</h1>
  <body>
