--- a/why.html
+++ b/why.html
@@ -12,6 +12,6 @@ href="css/testing-stylesheet.css"/>
   Originally funded by the U.S. Department of Defense, ARPANET used packet switching to allow multiple computers to communicate on a single network. 
   The creator of the World Wide Web or www was a computer scientist called Tim Berners-Lee.
    He is a currently a Professorial Fellow of Computer Science at the University of Oxford and a professor at the Massachusetts Institute of Technology.</p>
-   <p>Above is basically a blue-print of APARNET.</p>
+   <p>Above is basically a blue-print of ARPANET.</p>
  </body>
 </html>
